00-sample-apps/kafka-springboot-otel/manifests/service.yaml
kind: Service
apiVersion: v1
metadata:

  name: kafka-springboot
  namespace: observability-testcases

  labels:
    app: kafka-springboot
    app.kubernetes.io/component: kafka-springboot
    app.kubernetes.io/instance: kafka-springboot
    app.kubernetes.io/name: kafka-springboot
    app.kubernetes.io/part-of: sample-app

spec:

  ipFamilies:
    - IPv4

  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080

  internalTrafficPolicy: Cluster

  type: ClusterIP

  ipFamilyPolicy: SingleStack

  selector:
    app: kafka-springboot
    app.kubernetes.io/component: kafka-springboot
    app.kubernetes.io/instance: kafka-springboot
    app.kubernetes.io/name: kafka-springboot
    app.kubernetes.io/part-of: sample-app
